2012-12-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/fitConfig.py: statErrorType property added, plus option to set it
                           progagate down to channels in config 
                           constructorInit uses mkdir_p implementation for new directories
	* scripts/HistFitter.py: now uses argparse; -d is the old draw setting, Alex'
                             --draw is now -D. Other changes: --ty -> -T, fit
                             types via -F (two-letter shorts not allowed) 
	* setup.sh: if-statement to check hostname; lx* will take gcc from afs

2012-12-07 Evgeny Khramov <Evgeniy.Khramov@cern.ch>
	* UpperLimitTable.py: set the workspace name for each individual channel

2012-11-07 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* setup.sh: source statement for gcc breaks setups when running locally.
				This ought to be made an optional argument!
	* src/Utils.cxx: indenting identical to other .cxx files
	* src/Utils.cxx: GenerateFitAndPlot removed extra GEndl statements
	* scripts/HistFitter.py: print statements now through logger

2012-11-07 Alex Koutsman <alex.koutsman@cern.ch>
	* python/configManager.py : small addition of function setting for C++ cfgMgr
	* scripts/HistFitter.py : addition of GenerateFitAndPlotCPP function and --draw command with options
	* src/Utils.cxx : addition of GenerateFitAndPlot() function in C++, to decouple C++ side from python
	* src/FitConfig.cxx : small cleaning adjustments
	* src/ConfigMgr.cxx  : small cleaning adjustments
	* src/Utils.h  : addition of GenerateFitAndPlot() function in C++
	* src/FitConfig.h  : small cleaning adjustments
	* src/ConfigMgr.h  : small cleaning adjustments

2012-11-06 Alex Koutsman <alex.koutsman@cern.ch>
	* src/Utils.cxx: clean up of DecomposeWS
	* src/Utils.h: addition of some functions (incomplete functionality)
	* src/FitConfig.h: add function addSample(samplename, color)
	* set default ROOT version to 5.34.02 (small configuration bug in 5.34.03)
	