@@ -1,4 +1,8 @@
-2012-12-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+2012-11-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+    * scripts/HistFitter.py: -D is -d again; using without options gives old
+	                         behaviour (before+after)
+
+2012-11-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* python/fitConfig.py: statErrorType property added, plus option to set it
                            progagate down to channels in config 
                            constructorInit uses mkdir_p implementation for new directories
@@ -7,7 +11,7 @@
                              types via -F (two-letter shorts not allowed) 
 	* setup.sh: if-statement to check hostname; lx* will take gcc from afs
 
-2012-12-07 Evgeny Khramov <Evgeniy.Khramov@cern.ch>
+2012-11-07 Evgeny Khramov <Evgeniy.Khramov@cern.ch>
 	* UpperLimitTable.py: set the workspace name for each individual channel
 
 2012-11-07 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
